<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_monuments"
            android:icon="@drawable/ic_building"
            android:title="@string/MonumentsCategory" />
        <item
            android:id="@+id/nav_museums"
            android:icon="@drawable/ic_church"
            android:title="@string/MuseumsCategory" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/RestaurantsCategory" />
        <item
            android:id="@+id/nav_hotels"
            android:icon="@drawable/ic_hotel"
            android:title="@string/HotelsCategory" />
    </group>

    <item android:title="@string/NavMenuItem1">
        <menu>
            <item
                android:id="@+id/nav_cityGuide"
                android:icon="@drawable/ic_city"
                android:title="@string/cityGuideText" />
            <item
                android:id="@+id/nav_carTrouble"
                android:icon="@drawable/ic_car"
                android:title="@string/carTroubleText" />
        </menu>
    </item>

</menu>
